# magicbeans

./: .gitignore  README.md  common.py  importer-chiawallet.py  importer-coinbase.py  importer-coinbasepro.py  importer-gateio.py  pyproject.toml  setup.cfg  test_differ.sh
bean_crypto_import/: importer-gateio.py  pyproject.toml  run-import.py  tripod.py
data/: magicbeans_example.beancount  prices.csv
src/bean_crypto_import/: run-import.py  run-sort.py  transfers.py  tripod.py
src/bean_crypto_import/_tests/: test_common.py  test_transfers.py  test_tripod.py
src/bean_crypto_import/importers/: chiawallet.py  coinbase.py  coinbasepro.py  gateio.py
src/magicbeans/: __main__.py  common.py  config.py  config_example.py  conftest.py  crypto_booking.py  disposals.py  gen_example.py  main_example.py  mining.py  prices.py  queries.py  reports.py  run-directives.py  run-import.py  run-report.py  run-sort.py  run.py  run_report.py  runner.py  transfers.py  tripod.py
src/magicbeans/_tests/: mocks.py  test_common.py  test_disposals.py  test_gen_example.py  test_importers.py  test_transfers.py  test_tripod.py
src/magicbeans/_tests/importer_files/chiawallet/: chiawallet.2022.12.12.csv  chiawallet.2022.12.12.csv.extract  chiawallet.2022.12.12.csv.file_account  (+1 more)
src/magicbeans/_tests/reports/: test_driver.py
src/magicbeans/data/: magicbeans_example.beancount
src/magicbeans/importers/: chiawallet.py  coinbase.py  coinbasepro.py  gateio.py
src/magicbeans/reports/: data.py  default_report.py  driver.py  latex.py  text.py
tests/: Coinbase-d34db33f-TransactionsHistoryReport-2020-01-01-00-00-00.csv.beancount  account.csv  account.csv.beancount  chiawallet.2022.12.12.csv  chiawallet.2022.12.12.csv.beancount  joined.csv.beancount
(+10 files in other folders)
