[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magicbeans"
version = "0.0.1"
authors = [
  { name="Eric Altendorf", email="ericaltendorf@gmail.com" },
]
description = "Tools for importing crypto records to Beancount."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytz",
    "tabulate",
    "pyfiglet",
    "pyyaml",
    "pylatex",
    "requests",
    "beancount @ git+https://github.com/beancount/beancount@master",
    "beangulp @ git+https://github.com/beancount/beangulp@master",
    "beanquery @ git+https://github.com/beancount/beanquery@master",
]

[project.urls]
"Homepage" = "https://github.com/ericaltendorf/magicbeans"
"Bug Tracker" = "https://github.com/ericaltendorf/magicbeans/issues"
